--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>Ink'd Impressions</title>
 </head>
 <body>
-    
+    <!--NavBar-->
+    <header>
+        <div class="logo">
+            <img class="logoImg" src="logo.png" alt="My Website Logo">
+        </div>
+        <nav>
+            <a class="links" href="index.html">Home</a>
+            <a class="links" href="aboutUs.html">About</a>
+            <a class="links" href="products.html">Products</a>
+        </nav>
+    </header>
 </body>
 </html>
