--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Ink'd Impressions</title>
 </head>
@@ -14,20 +16,76 @@
     <!--Date: 5/16/23-->
     <!--Author: Isaac Vaughn-->
 
-    <div class="header">
+    <!--NavBar-->
+    <header>
         <div class="logo">
-            <img class="inkLogo" src="Inkd Inverted Color-svg.svg" alt="Ink'd Logo">
+            <img class="logoImg" src="logo.png" alt="My Website Logo">
         </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="aboutUs.html">About Us</a>
-            <a href="Products.html">Products</a>
+            <a class="links" href="index.html">Home</a>
+            <a class="links" href="aboutUs.html">About</a>
+            <a class="links" href="products.html">Products</a>
         </nav>
+    </header>
+
+    <!--Top Image-->
+    <div class="siteBody">
+        <div class="topImg"></div>
+        <div class="contactButton">
+            <a href="aboutUs.html" class="button">Contact Us</a>
+        </div>
     </div>
 
-    <div class="container">
-        
+    <!--Services Section-->
+    <div class="services">
+        <div class="gallery">
+            <div class="row">
+                <div class="serviceImgContainer">
+                    <img class="serviceImg" src="services1.jpg" alt="Image 1">
+                    <div class="overlay">
+                        <a href="products.html">Apparel</a>
+                    </div>
+                </div>
+                <div class="serviceImgContainer">
+                    <img class="serviceImg" src="services2.jpg" alt="Image 2">
+                    <div class="overlay">
+                        <a href="products.html">Drinkware</a>
+                    </div>
+                </div>
+                <div class="serviceImgContainer">
+                    <img class="serviceImg" src="services3.jpg" alt="Image 3">
+                    <div class="overlay">
+                        <a href="products.html">Miscellaneous</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="serviceImgContainer">
+                    <img class="serviceImg" src="services4.jpg" alt="Image 4">
+                    <div class="overlay">
+                        <a href="products.html">Print Methods</a>
+                    </div>
+                </div>
+                <div class="serviceImgContainer">
+                    <img class="serviceImg" src="services5.jpg" alt="Image 5">
+                    <div class="overlay">
+                        <a href="aboutUs.html">Buy in Bulk</a>
+                    </div>
+                </div>
+                <div class="serviceImgContainer">
+                    <img class="serviceImg" src="services6.jpg" alt="Image 6">
+                    <div class="overlay">
+                        <a href="aboutUs.html">Fundraisers</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> <!--End of services-->
+
+    <div class="breakImg">
+        <h1>Design - Print - Wear</h1>
     </div>
+
 </body>
 
 </html>
