--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-qsiKf71c/ZX9G9g8J+j0n6lPp6KwNVm+tdU6xpqVr5M5z5q3XHmPNIrjKnFzfcN6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Ink'd Impressions</title>
 </head>
@@ -14,12 +15,12 @@
 <body>
     <!--Author: Isaac Vaughn-->
     <!--Date: 5/16/23-->
-    <!--Author: Isaac Vaughn-->
+    <!--Title: Ink'd Impressions Website-->
 
     <!--NavBar-->
     <header>
         <div class="logo">
-            <img class="logoImg" src="logo.png" alt="My Website Logo">
+            <img class="logoImg" src="images/logo.png" alt="My Website Logo">
         </div>
         <nav>
             <a class="links" href="index.html">Home</a>
@@ -41,19 +42,19 @@
         <div class="gallery">
             <div class="row">
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="services1.jpg" alt="Image 1">
+                    <img class="serviceImg" src="images/services1.jpg" alt="Image 1">
                     <div class="overlay">
                         <a href="products.html">Apparel</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="services2.jpg" alt="Image 2">
+                    <img class="serviceImg" src="images/services2.jpg" alt="Image 2">
                     <div class="overlay">
                         <a href="products.html">Drinkware</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="services3.jpg" alt="Image 3">
+                    <img class="serviceImg" src="images/services3.jpg" alt="Image 3">
                     <div class="overlay">
                         <a href="products.html">Miscellaneous</a>
                     </div>
@@ -61,19 +62,19 @@
             </div>
             <div class="row">
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="services4.jpg" alt="Image 4">
+                    <img class="serviceImg" src="images/services4.jpg" alt="Image 4">
                     <div class="overlay">
                         <a href="products.html">Print Methods</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="services5.jpg" alt="Image 5">
+                    <img class="serviceImg" src="images/services5.jpg" alt="Image 5">
                     <div class="overlay">
                         <a href="aboutUs.html">Buy in Bulk</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="services6.jpg" alt="Image 6">
+                    <img class="serviceImg" src="images/services6.jpg" alt="Image 6">
                     <div class="overlay">
                         <a href="aboutUs.html">Fundraisers</a>
                     </div>
@@ -86,6 +87,20 @@
         <h1>Design - Print - Wear</h1>
     </div>
 
+    <!--Veteran owned Business break image-->
+    <div class="veteranBreakImage">
+        <div class="vetOwned">
+        </div>
+
+        <div>
+            <a href="aboutUs.html" class="vetButton">Veteran Owned</a>
+        </div>
+    </div>
+
+    <footer>
+        <p class="footText"><a class="footLink" href="mailto:info@inkdimpressions.com">info@inkdimpressions.com</a> | 417-920-4962 | Facebook | Instagram</p>
+    </footer>
+      
 </body>
 
 </html>
