--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-qsiKf71c/ZX9G9g8J+j0n6lPp6KwNVm+tdU6xpqVr5M5z5q3XHmPNIrjKnFzfcN6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Ink'd Impressions</title>
 </head>
