--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--NavBar-->
     <header>
         <div class="logo">
-            <img class="logoImg" src="images/logo.png" alt="My Website Logo">
+            <img class="logoImg" src="images/logo.png" alt="Website Logo">
         </div>
         <nav>
             <a class="links" href="index.html">Home</a>
@@ -33,7 +33,7 @@
     <div class="siteBody">
         <div class="topImg"></div>
         <div class="contactButton">
-            <a href="aboutUs.html" class="button">Contact Us</a>
+            <a href="aboutUs.html" class="button">CONTACT US</a>
         </div>
     </div>
 
@@ -90,15 +90,19 @@
     <!--Veteran owned Business break image-->
     <div class="veteranBreakImage">
         <div class="vetOwned">
+          <div class="vetTxt">
+            <h1>Veteran Owned Business</h1>
+          </div>
         </div>
-
         <div>
-            <a href="aboutUs.html" class="vetButton">Veteran Owned</a>
+          <a href="aboutUs.html" class="vetButton">LEARN MORE</a>
         </div>
-    </div>
+      </div>
+      
 
+    <!--Footer-->
     <footer>
-        <p class="footText"><a class="footLink" href="mailto:info@inkdimpressions.com">info@inkdimpressions.com</a> | 417-920-4962 | Facebook | Instagram</p>
+        <p class="footText"><a class="footLink" href="mailto:info@inkdimpressions.com">info@inkdimpressions.com</a> | <a class="footLink" href="tel:417-920-4962">417-920-4962</a> | 1700 W. Walnut St. Springfield, MO 65806</p>
     </footer>
       
 </body>
