--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     <!--NavBar-->
     <header>
         <div class="logo">
-            <img class="logoImg" src="logo.png" alt="My Website Logo">
+            <img class="logoImg" src="images/logo.png" alt="Website Logo">
         </div>
         <nav>
             <a class="links" href="index.html">Home</a>
@@ -22,5 +22,15 @@
             <a class="links" href="products.html">Products</a>
         </nav>
     </header>
+
+    <!--container for everything on "Product" page-->
+    <div class="prodBody">
+
+    </div>
+
+    <!--Footer-->
+    <footer>
+        <p class="footText"><a class="footLink" href="mailto:info@inkdimpressions.com">info@inkdimpressions.com</a> | <a class="footLink" href="tel:417-920-4962">417-920-4962</a> | 1700 W. Walnut St. Springfield, MO 65806</p>
+    </footer>
 </body>
 </html>
