completed all but a few media queries... maybe

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -28,18 +28,18 @@
 
     <!--Container for everything on "About Us" page-->
     <div class="aboutBody">
-        <div class="aboutTopImage">
+        <div class="topImage">
             <div class="aboutUs">
-                <div class="aboutTxt">
-                    <h1>ABOUT US</h1>
-                </div>
             </div>
+            <div class="topTxt">
+              <h1>ABOUT US</h1>
+          </div>
         </div>
 
         <!--Top section of "About US"-->
         <div class="whoContainer">
-            <h2 class="whoTitle">Who Are We</h2>
-            <p class="whoTxt">Welcome to Ink'd Impressions! We are a small, veteran owned screen printing business happy
+            <h2 class="miniTitle">Who Are We</h2>
+            <p class="subTxt">Welcome to Ink'd Impressions! We are a small, veteran owned screen printing business happy
                 to provide you with custom apparel, drinkware, and more! Formerly Nixa Screen Printing, we have
                 completely rebranded, but still offer the same, high-quality work.</p>
         </div>
@@ -47,7 +47,7 @@
         <!--Information section of "About Us"-->
         <div class="infoSection">
             <div class="infoItem">
-              <img src="images/info1.jpg" alt="image-description">
+              <img src="images/info1.jpg" alt="shirt design">
             </div>
             <div class="infoTxt">
               <h2>What We Do</h2>
@@ -61,13 +61,13 @@
               <p>We have discounts for bulk orders and service members. So, the more you order, the more you save. And as a veteran-owned business, we proudly offer discounts to service members as our way of saying thank you. If you're interested in placing a bulk order or are a service member looking for custom apparel or drinkware, please don't hesitate to get in touch.</p>
             </div>
             <div class="infoItem">
-              <img src="images/info2.jpg" alt="image-description">
+              <img src="images/info2.jpg" alt="hoodies">
             </div>
           </div>
 
           <div class="infoSection">
             <div class="infoItem">
-              <img src="images/info3.jpg" alt="image-description">
+              <img src="images/info3.jpg" alt="phone">
             </div>
             <div class="infoTxt">
               <h2>Contact Us</h2>
