--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         <div class="gallery">
             <div class="row">
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="images/services1.jpg" alt="Image 1">
+                    <img class="serviceImg" src="images/services1.jpg" alt="apparel link">
                     <div class="overlay">
                         <a href="products.html">Apparel</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="images/services2.jpg" alt="Image 2">
+                    <img class="serviceImg" src="images/services2.jpg" alt="cup">
                     <div class="overlay">
                         <a href="products.html">Drinkware</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="images/services3.jpg" alt="Image 3">
+                    <img class="serviceImg" src="images/services3.jpg" alt="hat">
                     <div class="overlay">
                         <a href="products.html">Miscellaneous</a>
                     </div>
@@ -62,19 +62,19 @@
             </div>
             <div class="row">
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="images/services4.jpg" alt="Image 4">
+                    <img class="serviceImg" src="images/services4.jpg" alt="printing">
                     <div class="overlay">
                         <a href="products.html">Print Methods</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="images/services5.jpg" alt="Image 5">
+                    <img class="serviceImg" src="images/services5.jpg" alt="lots of shirts">
                     <div class="overlay">
                         <a href="aboutUs.html">Buy in Bulk</a>
                     </div>
                 </div>
                 <div class="serviceImgContainer">
-                    <img class="serviceImg" src="images/services6.jpg" alt="Image 6">
+                    <img class="serviceImg" src="images/services6.jpg" alt="people">
                     <div class="overlay">
                         <a href="aboutUs.html">Fundraisers</a>
                     </div>
