--- a/products.html
+++ b/products.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-qsiKf71c/ZX9G9g8J+j0n6lPp6KwNVm+tdU6xpqVr5M5z5q3XHmPNIrjKnFzfcN6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-qsiKf71c/ZX9G9g8J+j0n6lPp6KwNVm+tdU6xpqVr5M5z5q3XHmPNIrjKnFzfcN6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Ink'd Impressions</title>
 </head>
+
 <body>
     <!--NavBar-->
     <header>
@@ -25,12 +28,44 @@
 
     <!--container for everything on "Product" page-->
     <div class="prodBody">
+        <div class="topImage">
+            <div class="products">
+            </div>
+            <div class="topTxt">
+                <h1>Products</h1>
+            </div>
+        </div>
+
+        <!--How we print section-->
+        <div class="how">
+            <h2 class="miniTitle">How We Print</h2>
+            <p class="subTxt">Our screen printing service is your one-stop-shop for all your custom printing needs. By offering screen printing, embroidery, sublimation, DTF printing, custom decals, or custom designs, it allows us to cater towards your every need to make sure we can create whatever design you have in mind!</p>
+        </div>
+
+        <!--What we print on section-->
+        <div class="what">
+            <h3 class="subTitle">What Is Printed On</h3>
+            <p class="subTxt">From t-shirts and hoodies to hats and bags, we can print on almost any surface to bring your ideas to life. So, whether you're looking to create custom apparel for your business, event, or personal use, our printing services are the perfect solution. <a href="mailto:info@inkdimpressions.com" class="contactLink2">Contact</a> us today to get started!</p>
+        </div>
+
+        <!--Item Gallery-->
+        <h2 class="miniTitle">Past Products</h2>
+        <div class="pastGallery">
+            <img src="images/prod1.jpg" alt="shirt design" class="odd">
+            <img src="images/prod2.jpg" alt="shirt design">
+            <img src="images/prod3.jpg" alt="shirt design" class="odd">
+            <img src="images/prod4.jpg" alt="shirt design">
+            <img src="images/prod5.jpg" alt="shirt design" class="odd">
+            <img src="images/prod6.jpg" alt="shirt design">
+          </div>
 
     </div>
 
     <!--Footer-->
     <footer>
-        <p class="footText"><a class="footLink" href="mailto:info@inkdimpressions.com">info@inkdimpressions.com</a> | <a class="footLink" href="tel:417-920-4962">417-920-4962</a> | 1700 W. Walnut St. Springfield, MO 65806</p>
+        <p class="footText"><a class="footLink" href="mailto:info@inkdimpressions.com">info@inkdimpressions.com</a> | <a
+                class="footLink" href="tel:417-920-4962">417-920-4962</a> | 1700 W. Walnut St. Springfield, MO 65806</p>
     </footer>
 </body>
+
 </html>
