fixed some styles for about page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="veteranBreakImage">
         <div class="vetOwned">
           <div class="vetTxt">
-            <h1>Veteran Owned Business</h1>
+            <h1>Veteran Owned</h1>
           </div>
         </div>
         <div>
